# matheto

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
src/: Calculator.cpp  Calculator.h  CalculatorButton.cpp  CalculatorButton.h  LaTeXConverter.cpp  LaTeXConverter.h  MathEngine.cpp  MathEngine.h  TypstConverter.cpp  TypstConverter.h  main.cpp
